<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/time_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bridge">

        <TextView
            android:id="@+id/start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/start_time"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/end_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:text="@string/end_time"
            android:textColor="@color/inactive_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bridge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/time_layout"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/active_subject"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:clickable="false" />

        <ImageView
            android:id="@+id/subject_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/img_desc"
            app:srcCompat="@drawable/ic_line" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/lesson_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="@color/inactive_card"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/bridge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bridge"
        app:layout_constraintTop_toTopOf="@+id/bridge">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:singleLine="true"
                    android:text="@string/subject"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-medium"
                    android:singleLine="true"
                    android:text="@string/theme"
                    android:textColor="@color/inactive_text"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawablePadding="5dp"
                    android:fontFamily="sans-serif"
                    android:singleLine="true"
                    android:text="@string/teacher"
                    android:textColor="@color/inactive_text"
                    app:drawableLeftCompat="@drawable/ic_teacher_icon" />

                <TextView
                    android:id="@+id/teach_form"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:drawablePadding="5dp"
                    android:fontFamily="sans-serif"
                    android:singleLine="true"
                    android:text="@string/teach_format"
                    android:textColor="@color/inactive_text"
                    app:drawableLeftCompat="@drawable/ic_easel_art_chart" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/colon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/colon"
                    android:textColor="@color/inactive_text"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/lesson_img"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/sub_physics" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>